# AngryBirdsQR

./: .gitignore  CMakeLists.txt  README.md  cmake_install.cmake  main.cpp  runQRGame
game/: Core.h  Game.h  InputManager.h  Window.h  ncursim.h
res/: game-log-FIFO-que-nb-nb.csv  game-log-RR-que-nb-nb.csv  game-log-RR-shared.csv  game-log-defsched-q-b-b.csv  game-log-defsched-q-b-nb.csv  game-log-defsched-q-nb-b.csv  game-log-defsched-q-nb-nb.csv  game-log-defsched-que-nb-nb.csv  game-log-defsched-shared.csv  game-log-fifo-q-b-b.csv  game-log-fifo-q-b-nb.csv  game-log-fifo-q-nb-b.csv  game-log-fifo-q-nb-nb.csv  game-log-fifo-shared.csv  game-log-rr-q-b-b.csv  game-log-rr-q-b-nb.csv  game-log-rr-q-nb-b.csv  game-log-rr-q-nb-nb.csv  game-log-rr-shared.csv  video-log-FIFO-que-nb-nb.csv  video-log-RR-que-nb-nb.csv  video-log-RR-shared.csv  video-log-defsched-q-b-b.csv  video-log-defsched-q-b-nb.csv  video-log-defsched-q-nb-b.csv  video-log-defsched-q-nb-nb.csv  video-log-defsched-que-nb-nb.csv  video-log-defsched-shared.csv  video-log-fifo-q-b-b.csv  video-log-fifo-q-b-nb.csv  video-log-fifo-q-nb-b.csv  video-log-fifo-q-nb-nb.csv  video-log-fifo-shared.csv  video-log-rr-q-b-b.csv  video-log-rr-q-b-nb.csv  video-log-rr-q-nb-b.csv  video-log-rr-q-nb-nb.csv  video-log-rr-shared.csv
src/: Common.h  Game.h  IGame.h  IProcess.h  IVideo.h  ImageFactory.cpp  ImageFactory.h  InputManager.h  Logger.h  QRGame.cpp  QRGame.h  QRReader.cpp  QRReader.h  QueueGame.h  QueueVideo.h  SharedGame.h  SharedVideo.h  Util.h  common.h  qrReader.cpp
src/game/: Core.h  InputManager.h  Logic.h  Player.h  Sprite.h  Wall.h  Window.h
src/image/: CameraHandler.cpp  CameraHandler.h  tests.cpp
src/memory/: IGame.h  IVideo.h  QueueGame.h  QueueVideo.h  SharedGame.h  SharedMemoryGame.cpp  SharedMemoryGame.h  SharedMemoryVideo.cpp  SharedMemoryVideo.h  SharedQueueGame.cpp  SharedQueueGame.h  SharedQueueTimestamp.h  SharedQueueVideo.cpp  SharedQueueVideo.h  SharedVideo.h
src/qr/: QRReader.h  qrReader.cpp
video_capturing/: CameraHandler.cpp  CameraHandler.h  Makefile  main.cpp
